adding java config to startup script